<resources>
    <string name="app_name">CetUp</string>
    <string name="text_user_name">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_signin">Sign In</string>
    <string name="text_welcome">Welcome Back</string>
    <string name="text_register">Register</string>
    <string name="text_chat_fragment">Chat Fragment</string>
    <string name="text_search_fragment">Search Fragment</string>
    <string name="fragment_setting">Fragment Setting</string>
    <string name="text_message_username">Please write username</string>
    <string name="text_message_email">Please write email</string>
    <string name="text_message_password">Please write password</string>
    <string name="text_error_message">Error Message: </string>
    <string name="text_user">Users</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="signup">Sign Up to Continue</string>
    <string name="remember">Remember me</string>
    <string name="forgot">Forgot Password</string>
    <string name="create_acc">Create account</string>
    <string name="terms">"Terms and Condition "</string>
    <string name="signin">Sign In to Continue</string>
    <string name="didnt">Don\'t have account yet?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="view_all">View All</string>
    <string name="result">10+</string>
    <string name="menu">Menu</string>
    <string name="image">image</string>
    <string name="background">background</string>
    <string name="name">Name</string>
    <string name="message">This is message for her or him</string>
    <string name="time">2 min ago</string>
    <string name="text_username">Username</string>
    <string name="text_signout">Sign Out</string>
    <string name="cetup">CetUp</string>
    <string name="welcome">Welcome to CetUp</string>
    <string name="word1">Sign In or Sign Up to Continue</string>
    <string name="word2">Terms and Conditions</string>
    <string name="line">line</string>
    <string name="word3">Sign Up to Continue</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="word4">Sign In to Continue</string>
    <string name="text_display_name">Display Name</string>
    <string name="lable_name">Your name here</string>
    <string name="lable_status">Input your status here</string>
    <string name="lable_number">Your phone number</string>
    <string name="text_display_number">Phone number</string>
    <string name="text_display_status">Status message</string>
    <string name="share">Share profile updates on story</string>
    <string name="text_id_user">ID</string>
    <string name="lable_id">Your ID</string>
    <string name="allow">Allow others to add me by ID</string>
    <string name="enabled">Enable this setting to allow others to add you as a friend by searching for your ID</string>
    <string name="qr">QR Code</string>
    <string name="write_message_here">Write something here</string>
    <string name="text_user_status">status</string>
    <string name="info">My Info</string>
    <string name="acc">Account</string>
    <string name="keep">Keep</string>
    <string name="privacy">Privacy,Security,Change Number</string>
    <string name="general">General Setting</string>
    <string name="theme">Theme,Walpaper,Chat history</string>
    <string name="notif">Notifications</string>
    <string name="group"><![CDATA[Messages,Group & Call tones]]></string>
    <string name="media">Media</string>
    <string name="photos"><![CDATA[Photos & Videos]]></string>
    <string name="friends">Friends</string>
    <string name="sync">Sync contact, List contact</string>
    <string name="bahasa">Languages</string>
    <string name="others">Others</string>
    <string name="storage"><![CDATA[Data & Storage Usage]]></string>
    <string name="network">Network usage, Auto-Download</string>
    <string name="help">Help</string>
    <string name="helpers">FAQ,Contact us Privacy policy</string>
    <string name="delete">Delete Account</string>
    <string name="image_send">Send Image</string>
    <string name="no_message">No Message Available</string>
    <string name="upload">Please Wait for Uploading</string>
    <string name="wait">Loading</string>
    <string name="search">Search..</string>
    <string name="keep1">Your saved files</string>
    <string name="english">English</string>
    <string name="pick_image">Pick Image</string>
    <string name="write_message_first">Please write a message first</string>
    <string name="image_upload">Image is uploading, pleae wait...</string>
    <string name="image_sent">Image Sent</string>
    <string name="write_something">Please write something...</string>
    <string name="wait_for_upload">Please wait..</string>
    <string name="search_users_here">Search users</string>
</resources>