<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/_130dp"
        android:layout_height="@dimen/_120dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageView
        android:id="@+id/icon_warna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginTop="@dimen/_35dp"
        android:contentDescription="@string/image"
        android:src="@drawable/cetup_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_warna"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/avanir5"
        android:text="@string/text_welcome"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_warna" />

    <TextView
        android:id="@+id/textcontinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="3dp"
        android:text="@string/word3"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/et_user_name_signup"
        android:layout_width="320dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/username"
        android:background="@drawable/btnphone"
        android:drawableStart="@drawable/profil"
        android:drawablePadding="@dimen/_7dp"
        android:paddingStart="@dimen/_5dp"
        android:hint="@string/text_user_name"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textcontinue" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="320dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_7dp"
        android:autofillHints="@string/email"
        android:background="@drawable/btnphone"
        android:drawableStart="@drawable/email2"
        android:drawablePadding="@dimen/_12dp"
        android:paddingStart="@dimen/_5dp"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_user_name_signup"
        app:layout_constraintStart_toStartOf="@+id/et_user_name_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name_signup" />

    <EditText
        android:id="@+id/et_password_signup"
        android:layout_width="320dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="@dimen/_7dp"
        android:autofillHints="@string/password"
        android:background="@drawable/btnphone"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="@dimen/_12dp"
        android:paddingStart="@dimen/_5dp"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <ImageView
        android:id="@+id/centang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15dp"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="@+id/textcontinue"
        app:layout_constraintTop_toBottomOf="@+id/et_password_signup"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/centang"
        android:text="@string/remember"
        app:layout_constraintBottom_toBottomOf="@+id/centang"
        app:layout_constraintStart_toEndOf="@+id/centang"
        app:layout_constraintTop_toTopOf="@+id/centang" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/forgot"
        app:layout_constraintBottom_toBottomOf="@+id/centang"
        app:layout_constraintEnd_toEndOf="@+id/et_password_signup"
        app:layout_constraintTop_toTopOf="@+id/centang" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="320dp"
        android:layout_height="@dimen/_50dp"
        android:layout_below="@id/remember"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_40dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/avanir5"
        android:gravity="center"
        android:text="@string/text_signup"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centang" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:text="@string/terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_line1"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_2dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@android:color/black"
        android:contentDescription="@string/line"
        app:layout_constraintEnd_toEndOf="@+id/terms"
        app:layout_constraintStart_toStartOf="@+id/terms"
        app:layout_constraintTop_toBottomOf="@+id/terms" />

</androidx.constraintlayout.widget.ConstraintLayout>