<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_cetup_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cetup_grey"
        android:contentDescription="@string/cetup" />

    <ImageView
        android:id="@+id/iv_cetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cetup_grey"
        app:srcCompat="@drawable/cetup_icon"
        android:contentDescription="@string/cetup" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/welcome"
        android:fontFamily="@font/avanir5"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cetup" />

    <TextView
        android:id="@+id/tv_word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/word1"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <Button
        android:id="@+id/btn_welcome_sign_up"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:background="@drawable/btn_loginshape"
        android:text="@string/signup"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_word1" />

    <Button
        android:id="@+id/btn_welcome_signin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/btn_red"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_welcome_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_welcome_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_welcome_sign_up" />

    <TextView
        android:id="@+id/tv_word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:text="@string/word2"
        app:layout_constraintBottom_toTopOf="@+id/iv_line"
        app:layout_constraintEnd_toEndOf="@+id/btn_welcome_signin"
        app:layout_constraintStart_toStartOf="@+id/btn_welcome_signin" />

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_2dp"
        android:layout_marginBottom="@dimen/_40dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_word2"
        app:layout_constraintStart_toStartOf="@+id/tv_word2"
        android:contentDescription="@string/line" />

</androidx.constraintlayout.widget.ConstraintLayout>